cluster/homelab/apps/networking-toolbox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: networkingtoolbox
spec:
  selector:
    app.kubernetes.io/instance: networkingtoolbox
    app.kubernetes.io/name: networkingtoolbox
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http
